added: font courier new, lucida typewriter, monospace

--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<div>Allillanchu Pachamama</div>
+<div style="font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;">
+	Allillanchu Pachamama
+</div>
