--- a/holi/index.html
+++ b/holi/index.html
@@ -1,4 +1,4 @@
 <div style="font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
 			left: 0;line-height: 200px;margin-top: -100px;position: absolute;text-align: center;top: 50%;width: 100%;">
-	Allinllachu Pachamama
+	Allinlla
 </div>
